7266265a998045be6bc8ee8a457cf69b1cca0b84

--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@
 <p>Relationship status 2017-: married</p>
 </li>
 <li>
-<p>Chinese name: 三西猴, means "three western monkeys". Phonetic approximation to SANtilli CIRO. Semi-unintentionally reminds Chinese people of <a href="https://en.wikipedia.org/wiki/Sun_Wukong">Sun Wukong (孙悟空)</a>. Given by my wife, then girlfriend, as a semi-joke, and I took it up because the best way to take a joke is to go with the joker.</p>
+<p>Chinese name: 三西猴, means "three western monkeys". Phonetic approximation to SANtilli CIRO. Semi-unintentionally reminds Chinese people of <a href="https://en.wikipedia.org/wiki/Sun_Wukong">Sun Wukong (孙悟空)</a>. Given by my wife, then girlfriend, as a semi-joke, and he took it up because the best way to take a joke is to go with the joker.</p>
 </li>
 <li>
-<p>Laptop: high end ThinkPad</p>
+<p>Laptop: high end <a href="https://en.wikipedia.org/wiki/ThinkPad">ThinkPad</a></p>
 </li>
 <li>
 <p>Distro: latest Ubuntu release</p>
@@ -1973,6 +1973,9 @@
 <p><a href="https://www.shadertoy.com/user/cirosantilli" class="bare">https://www.shadertoy.com/user/cirosantilli</a></p>
 </li>
 <li>
+<p><a href="https://www.strava.com/athletes/47913768" class="bare">https://www.strava.com/athletes/47913768</a></p>
+</li>
+<li>
 <p><a href="https://www.tastekid.com/ciro.santilli" class="bare">https://www.tastekid.com/ciro.santilli</a></p>
 </li>
 <li>
@@ -2013,7 +2016,7 @@
 <p><a href="https://v2ex.com/member/cirosantilli" class="bare">https://v2ex.com/member/cirosantilli</a></p>
 </li>
 <li>
-<p><a href="https://www.zhihu.com/people/cirosantilli" class="bare">https://www.zhihu.com/people/cirosantilli</a>. Ciro was <a href="https://github.com/cirosantilli/china-dictatorship/tree/746d7e851097bfacfb03149138f0e16c8da9d8db#zhihu-ban">banned in 2018-06-25</a>.</p>
+<p><a href="https://www.zhihu.com/people/cirosantilli" class="bare">https://www.zhihu.com/people/cirosantilli</a>. Ciro was <a href="https://github.com/cirosantilli/china-dictatorship/tree/746d7e851097bfacfb03149138f0e16c8da9d8db#zhihu-ban">prevented from posting in 2018-06-25</a>, and <a href="https://github.com/cirosantilli/china-dictatorship/tree/55e0ab569884e261119fd7683d677644df5c7ca1#zhihu-purge">the account and all content mentioning him were taken down in 2019-11-03</a>.</p>
 </li>
 </ul>
 </div>
@@ -6357,7 +6360,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/63d5e05144abeda2380c46ff452b73b99f6aeb8b">63d5e05144abeda2380c46ff452b73b99f6aeb8b</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7266265a998045be6bc8ee8a457cf69b1cca0b84">7266265a998045be6bc8ee8a457cf69b1cca0b84</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
