dd40c5eb939693f449847dc121b75ebb78f024bb

--- a/index.html
+++ b/index.html
@@ -4031,6 +4031,25 @@ xdg-open http://localhost:4000</pre>
 <div class="paragraph">
 <p>Poet, scientists and warriors all in one? <a href="https://en.wikipedia.org/wiki/180_Degrees_South:_Conquerors_of_the_Useless">Conquerors of the useless</a>.</p>
 </div>
+<div class="paragraph">
+<p>A wise teacher from <a href="#university-of-sao-paulo-brazil">University of São Paulo, Brazil</a> once told the class <a href="#ciro-santilli">Ciro Santilli</a> attended an anecdote about his life:</p>
+</div>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p>I used to want to learn Mathematics.</p>
+</div>
+<div class="paragraph">
+<p>But it was very hard.</p>
+</div>
+<div class="paragraph">
+<p>So in the end, I became an engineer, and found an engineering solution to the problem, and married a Mathematician instead.</p>
+</div>
+</blockquote>
+</div>
+<div class="paragraph">
+<p>It turned out that, about 10 years later, Ciro ended up following this advice, unwittingly.</p>
+</div>
 <div id="image-xkcd-435" class="imageblock">
 <div class="content">
 <a class="image" href="#image-xkcd-435"><img src="https://web.archive.org/web/20190925220347if_/https://imgs.xkcd.com/comics/purity.png" alt="purity" height="400"></a>
@@ -4239,6 +4258,14 @@ xdg-open http://localhost:4000</pre>
 </div>
 <div class="paragraph">
 <p><a href="https://mtg.gamepedia.com/Urza%27s_block">Urza&#8217;s block</a> is the most epic of all. Ridiculous power level and epic art, and happened just before <a href="#ciro-santilli">Ciro Santilli</a> started playing, so Ciro saw some cards from it floating around, but not many, and it felt mystical.</p>
+</div>
+<div class="paragraph">
+<p>In 2019, <a href="https://arxiv.org/pdf/1904.09828.pdf">a paper proved</a> that MTG is Turing Complete with a legacy legal deck. Live demo with some hand waving: <a href="https://www.youtube.com/watch?v=pdmODVYPDLA" class="bare">https://www.youtube.com/watch?v=pdmODVYPDLA</a> "I Built a COMPUTER in Magic: The Gathering" by "Because Science" published in Oct 31, 2019. TODO: how is this reflected in the rules? <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues/42" class="bare">https://github.com/cirosantilli/cirosantilli.github.io/issues/42</a></p>
+</div>
+<div class="videoblock">
+<div class="content">
+<iframe height="400" src="https://www.youtube.com/embed/pdmODVYPDLA?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
 </div>
 </div>
 </div>
@@ -5455,7 +5482,7 @@ xdg-open http://localhost:4000</pre>
 </ul>
 </div>
 <div class="paragraph">
-<p>Prgrammers of the world: unite! Focus on one IDE, and make it work for all languages and all build systems. Give it all the features that Eclipse has, but none of the bugginess. Work with top project to make sure the IDE works for all top projects.</p>
+<p>Programmers of the world: unite! Focus on one IDE, and make it work for all languages and all build systems. Give it all the features that Eclipse has, but none of the bugginess. Work with top project to make sure the IDE works for all top projects.</p>
 </div>
 <div class="paragraph">
 <p>Projects of the world: support one IDE, with in-tree configuration. Complex integration is often required between the IDE and the build system, and sucessful projects must to that once for all developpers. Either do this, or watch you complex project wither away.</p>
@@ -6360,7 +6387,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7266265a998045be6bc8ee8a457cf69b1cca0b84">7266265a998045be6bc8ee8a457cf69b1cca0b84</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/dd40c5eb939693f449847dc121b75ebb78f024bb">dd40c5eb939693f449847dc121b75ebb78f024bb</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
