--- a/index.html
+++ b/index.html
@@ -5382,6 +5382,9 @@ xdg-open http://localhost:4000</pre>
 <p><a href="#e-ink">E Ink</a></p>
 </li>
 <li>
+<p><a href="http://web.archive.org/">Wayback machine</a>. The remedy to cowardice, innatention, censorship and amorality.</p>
+</li>
+<li>
 <p><a href="#ide">IDEs</a></p>
 </li>
 <li>
@@ -6387,7 +6390,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/dd40c5eb939693f449847dc121b75ebb78f024bb">dd40c5eb939693f449847dc121b75ebb78f024bb</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/d4dff7776e30e12f9125fb3cfdc9cc42680f889d">d4dff7776e30e12f9125fb3cfdc9cc42680f889d</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
