7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 </div>
 <div id="image-xi-jinping-chrysanthemum-230-liusi" class="imageblock">
 <div class="content">
-<a class="image" href="#image-xi-jinping-chrysanthemum-230-liusi"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/Chrysanthemum_Xi_Jinping_with_liusi_added_by_Ciro_Santilli.jpeg" alt="Chrysanthemum Xi Jinping with liusi added by Ciro Santilli" height="230"></a>
+<a class="image" href="#image-xi-jinping-chrysanthemum-230-liusi"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/Chrysanthemum_Xi_Jinping_with_black_red_liusi_added_by_Ciro_Santilli.jpg" alt="Chrysanthemum Xi Jinping with black red liusi added by Ciro Santilli" height="230"></a>
 </div>
 <div class="title">Figure 4. <a href="https://www.independent.co.uk/news/world/asia/chinese-artist-who-posted-funny-image-of-president-xi-jinping-facing-five-years-in-prison-as-10282630.html">Chrysanthemum Xi Jinping</a> with <a href="https://en.wikipedia.org/wiki/1989_Tiananmen_Square_protests">六四</a> spice added by Ciro Santilli</div>
 </div>
@@ -6390,7 +6390,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/d4dff7776e30e12f9125fb3cfdc9cc42680f889d">d4dff7776e30e12f9125fb3cfdc9cc42680f889d</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d">7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
