0cb5ef6f6184c0b93a6f6906b0a698de243a3224

--- a/index.html
+++ b/index.html
@@ -4835,6 +4835,9 @@ xdg-open http://localhost:4000</pre>
 <div class="paragraph">
 <p>Students who don&#8217;t know English will never do anything truly useful in science and technology. So it is pointless to teach them anything (besides English itself).</p>
 </div>
+<div class="paragraph">
+<p>See also: <a href="#having-more-than-one-natural-language-is-bad-for-the-world">Having more than one natural language is bad for the world</a>.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="how-to-teach--text-is-cheaper-video"><a class="anchor" href="#how-to-teach--text-is-cheaper-video"></a><a class="link" href="#how-to-teach--text-is-cheaper-video">6.4. Text is cheaper than video</a></h3>
@@ -6390,7 +6393,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d">7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/0cb5ef6f6184c0b93a6f6906b0a698de243a3224">0cb5ef6f6184c0b93a6f6906b0a698de243a3224</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
