--- a/window-blackout.html
+++ b/window-blackout.html
@@ -99,7 +99,7 @@
 
 <p>I also believe in publishing <a href="https://en.wikipedia.org/wiki/Null_result">null results</a>, so here goes.</p>
 
-<p>Thick cardboard paper and <a href="https://www.amazon.co.uk/Gorilla-3044010-Tape-32m/dp/B001W030HM">Gorilla Tape</a>: the intense Sun heat made the cardboard bend, and even the Gorilla tape could not hold it, leading to light leakage. Even worse, it started to smell a bit, and I got afraid that it could catch fire, do don’t do this! Maybe I will try coating with aluminium foil next time, but I’m afraid it might stick to the glass. In any case, even if those setups work, your room may be permanently very dark depending on how far the window opens, which can lead to other problems such as mold.</p>
+<p>Thick cardboard paper and <a href="https://www.amazon.co.uk/Gorilla-3044010-Tape-32m/dp/B001W030HM">Gorilla Tape</a>: the intense Sun heat made the cardboard bend, and even the Gorilla tape could not hold it, leading to light leakage. Even worse, it started to smell a bit, and I got afraid that it could catch fire, do don’t do this! Maybe I will try coating with aluminium foil next time, but I’m afraid it might stick to the glass. In any case, even if those setups work, your room may be permanently very dark depending on how far the window opens, which can lead to other problems such as mold. Another downside of this method is that the tape is extremely sticky, and especially difficult to remove if it touches the glass, where you can’t use metallic items to scrape it off without scratching the glass. I had to get a solvent and use a lot of elbow grease to get rid of it.</p>
 
 <p>I have tried a few sleeping masks, but none of them were enough on their own. There is always some light leakage around the nose, especially as you turn around in the night. And some of them are too hot. I have tried:</p>
 
@@ -115,7 +115,7 @@
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d">7ae0fe8d5452cf028bf92b33f20929a5e5f7ac7d</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/0cb5ef6f6184c0b93a6f6906b0a698de243a3224">0cb5ef6f6184c0b93a6f6906b0a698de243a3224</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
