--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 <p>Laptop: high end <a href="https://en.wikipedia.org/wiki/ThinkPad">ThinkPad</a></p>
 </li>
 <li>
-<p>Distro: latest Ubuntu release</p>
+<p>Distro: latest <a href="#ubuntu">Ubuntu</a> release</p>
 </li>
 <li>
 <p>Vim or Emacs: Vim. But for The Love, will someone please make an open source C++ <a href="#ide">IDE</a> that actually just works?</p>
@@ -2865,7 +2865,7 @@ xdg-open http://localhost:4000</pre>
 <p>Ciro is a reptilian-like being with cold hands and feet and low blood pressure. For this reason he believes that he will die of cancer or some respiratory problem. If the <a href="#ciro-santillis-campaign-for-freedom-of-speech-in-china">Chinese government</a> doesn&#8217;t get him first that is. This also partly explains why Ciro is not a big fan of swimming.</p>
 </div>
 <div class="paragraph">
-<p>Besides <a href="#chinese-cuisine">Chinese food</a>, Ciro really likes eating fruits and nuts, maybe partly because he was <a href="#ciro-santillis-biography">born in  Brazil</a>, and partly because of monkey nature, see <a href="#ciro-santilli">his Chinese name</a>. At home is is known as "水果大王" (the big king of the fruits).</p>
+<p>Besides <a href="#chinese-cuisine">Chinese food</a>, Ciro really likes eating fruits and nuts, maybe partly because he was <a href="#ciro-santillis-biography">born in Brazil</a>, and partly because of monkey nature, see <a href="#ciro-santilli">his Chinese name</a>. At home is is known as "水果大王" (the big king of the fruits).</p>
 </div>
 <div class="sect3">
 <h4 id="effortless-effort"><a class="anchor" href="#effortless-effort"></a><a class="link" href="#effortless-effort">1.9.1. Effortless effort 無爲</a></h4>
@@ -3107,7 +3107,7 @@ xdg-open http://localhost:4000</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Speed_of_light#First_measurement_attempts" class="bare">https://en.wikipedia.org/wiki/Speed_of_light#First_measurement_attempts</a> Rømer and  Christiaan Huygens reached 26% accuracy by the observation of Jupiter&#8217;s moon!</p>
+<p><a href="https://en.wikipedia.org/wiki/Speed_of_light#First_measurement_attempts" class="bare">https://en.wikipedia.org/wiki/Speed_of_light#First_measurement_attempts</a> Rømer and Christiaan Huygens reached 26% accuracy by the observation of Jupiter&#8217;s moon!</p>
 </li>
 <li>
 <p><a href="https://en.wikipedia.org/wiki/Fizeau_experiment" class="bare">https://en.wikipedia.org/wiki/Fizeau_experiment</a> 1851</p>
@@ -6543,7 +6543,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/0176697daa489f403addfe1c797da43f8a063718">0176697daa489f403addfe1c797da43f8a063718</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/39cc1f039745e05c698f24c5d09517927d5c1db3">39cc1f039745e05c698f24c5d09517927d5c1db3</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
