470dd62bce29e9c35783f38bf955327346ea562f

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -109,7 +109,7 @@
 <p>In July 2019, the PuntSeq team got together with the awesome <a href="https://biomake.space">Cambridge Biomakespace</a>, an awesome biology makerspace open to all, to create a two day science outreach activity showing their procedures.</p>
 </div>
 <div class="paragraph">
-<p>Ciro knows nothing about biology, but since he is <a href="/#molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area">very curious about it</a>, in particular he jumped at this opportunity, and decided to document things as well as his limited knowledge would allow.</p>
+<p>Ciro knows nothing about biology, but since he is <a href="/#molecular-biology-is-the-next-big-thing-so-do-anything-in-that-area">very curious about it</a>, he jumped at this opportunity, and decided to document things as well as his limited knowledge would allow.</p>
 </div>
 <div class="paragraph">
 <p>All participants chipped in some money to help cover the experiment&#8217;s costs. Ciro suspects that this activity was done partially to help crowdfund the experiment, but it was a worthy investment!</p>
@@ -995,7 +995,7 @@ Your browser does not support the video tag.
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/39cc1f039745e05c698f24c5d09517927d5c1db3">39cc1f039745e05c698f24c5d09517927d5c1db3</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/470dd62bce29e9c35783f38bf955327346ea562f">470dd62bce29e9c35783f38bf955327346ea562f</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
