f98b2aceecff67c5529ebcf4fae3b5ba3d8eaf7b

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 <li><a href="#the-best-chinese-traditional-instrumental-music-albums-of-all-time">4.6.2. The best Chinese traditional instrumental music albums of all time</a></li>
 <li><a href="#the-best-modern-sung-western-music-of-all-time">4.6.3. The best modern sung Western music of all time</a>
 <ul class="sectlevel4">
-<li><a href="#the-best-popular-brazilian-music-songs-of-all-time">4.6.3.1. The best Popular Brazilian Music songs of all time</a></li>
+<li><a href="#mpb">4.6.3.1. The best Popular Brazilian Music songs of all time</a></li>
 </ul>
 </li>
 </ul>
@@ -3133,6 +3133,9 @@ xdg-open http://localhost:4000</pre>
 </div>
 <div class="title">Figure 24. Canal 5 on the beach, one of Santo&#8217;s 7 old Canals. Don&#8217;t worry, they&#8217;re pretty clean nowadays, and serve as handy reference points in town, as well as being surrounded with nice trees that provide shade and drop small inedible purple fruit that will stain your car for all eternity. <a href="https://commons.wikimedia.org/wiki/File:Canal_5_adentrando_na_praia_de_Santos.jpg">Source</a>.</div>
 </div>
+<div class="paragraph">
+<p>While in Santos, before going to university, a young teenage Ciro once seriously considered becoming a professional <a href="#the-best-music-albums-of-all-time">guitar player</a> and took courses with  <a href="http://www.maurohector.com.br/">an awesome teacher</a> (<a href="https://web.archive.org/web/20190107231749/http://www.maurohector.com.br/">archive</a>), but ultimately decided that <a href="#ciro-santillis-bad-old-event-memory">his bad memory</a> and overwhelming <a href="#write-free-books-to-get-famous-website-motivation">passion for the natural sciences</a> would better suit a scientific carrier. Although Ciro quit playing, his passion for the music has remained.</p>
+</div>
 <div class="sect3">
 <h4 id="ciro-santillis-formal-education"><a class="anchor" href="#ciro-santillis-formal-education"></a><a class="link" href="#ciro-santillis-formal-education">1.10.1. Ciro Santilli&#8217;s formal education</a></h4>
 <div class="paragraph">
@@ -4672,6 +4675,9 @@ xdg-open http://localhost:4000</pre>
 <p>The 60&#8217;s and 70&#8217;s were the days, those great <a href="https://en.wikipedia.org/wiki/Proxy_war">proxy wars</a> and <a href="https://en.wikipedia.org/wiki/Operation_Condor">CIA dictatorships</a> allowed hippies to make awesome freedom music without too imminent a fear of death.</p>
 </div>
 <div class="paragraph">
+<p>Songs making fun of things or that are pure <a href="#brazil">Brazil</a> nostalgia are also accepted. No love songs, ever. Except <a href="#mpb">some by Caetano</a>, but that&#8217;s it!</p>
+</div>
+<div class="paragraph">
 <p>English:</p>
 </div>
 <div class="ulist">
@@ -4684,10 +4690,23 @@ xdg-open http://localhost:4000</pre>
 </li>
 </ul>
 </div>
-<div class="sect4">
-<h5 id="the-best-popular-brazilian-music-songs-of-all-time"><a class="anchor" href="#the-best-popular-brazilian-music-songs-of-all-time"></a><a class="link" href="#the-best-popular-brazilian-music-songs-of-all-time">4.6.3.1. The best Popular Brazilian Music songs of all time</a></h5>
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/M%C3%BAsica_popular_brasileira" class="bare">https://en.wikipedia.org/wiki/M%C3%BAsica_popular_brasileira</a></p>
+<p>French:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=zKbXUcJawUI">Emmenez-moi</a> (<a href="https://fr.wikipedia.org/wiki/Emmenez-moi_(chanson)">wiki</a>) from the album Entre Deux Rêves (1967) by <a href="https://en.wikipedia.org/wiki/Charles_Aznavour">Charles Aznavour</a></p>
+</li>
+</ul>
+</div>
+<div class="sect4">
+<h5 id="mpb"><a class="anchor" href="#mpb"></a><a class="link" href="#mpb">4.6.3.1. The best Popular Brazilian Music songs of all time</a></h5>
+<div class="paragraph">
+<p>In Portuguese <a href="https://en.wikipedia.org/wiki/M%C3%BAsica_popular_brasileira">Música Popular Brasileira (MPB)</a>.</p>
+</div>
+<div class="paragraph">
+<p>The good songs stopped before of just after Ciro was born, they were originally heard by his parent&#8217;s generation. Those young new kids are boring.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -4701,7 +4720,10 @@ xdg-open http://localhost:4000</pre>
 <p>1977 <a href="https://www.youtube.com/watch?v=sQU7iQDiZvA">Marimbondo</a> track from the "Pirão de Peixe com Pimenta (1977)" album <a href="https://en.wikipedia.org/wiki/S%C3%A1_%26_Guarabyra">Sá &amp; Guarabyra</a></p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Caetano_Veloso">Caetano Veloso</a> is arguably <a href="#ciro-santilli">Ciro Santilli</a>'s favorite <a href="https://en.wikipedia.org/wiki/M%C3%BAsica_popular_brasileira">MPB</a> artist</p>
+<p><a href="https://www.youtube.com/watch?v=7VE6PNwmr9g">Metamorfose ambulante</a> from the <a href="https://en.wikipedia.org/wiki/Krig-ha,_Bandolo!">Krig-ha, Bandolo!</a> album by <a href="https://en.wikipedia.org/wiki/Raul_Seixas">Raul Seixas</a></p>
+</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Caetano_Veloso">Caetano Veloso</a> is arguably <a href="#ciro-santilli">Ciro Santilli</a>'s favorite MPB artist, he has just too many amazing songs.</p>
 <div class="ulist">
 <ul>
 <li>
@@ -4714,10 +4736,19 @@ xdg-open http://localhost:4000</pre>
 <p>1972 <a href="https://www.youtube.com/watch?v=MlmZIazQLJw">Você Não Entende Nada</a> performed by Caetano Veloso in album <a href="https://en.wikipedia.org/wiki/Caetano_e_Chico:_Juntos_e_Ao_Vivo">Caetano e Chico: Juntos e Ao Vivo (1972)</a>, originally by (TODO album, <a href="https://www.discogs.com/Gal-Costa-Legal-Voc%C3%AA-N%C3%A3o-Entende-Nada/release/5872459">Discogs</a> says Legal (1970), but <a href="https://en.wikipedia.org/wiki/Legal_(Gal_Costa_album)">wiki page</a> and photos of back disagree)</p>
 </li>
 <li>
-<p>1976 <a href="https://www.youtube.com/watch?v=9HpqgwC30Zg">Um Índio</a> from the <a href="https://en.wikipedia.org/wiki/Doces_B%C3%A1rbaros">Doces Bárbaros</a> album</p>
+<p>1976 <a href="https://www.youtube.com/watch?v=9HpqgwC30Zg">Um Índio</a> from the <a href="https://en.wikipedia.org/wiki/Doces_B%C3%A1rbaros">Doces Bárbaros (1976)</a> album, and also appeared in the <a href="https://en.wikipedia.org/wiki/Bicho_(album)">Bicho (1977)</a> album</p>
+</li>
+<li>
+<p>1977 <a href="https://www.youtube.com/watch?v=sSqU6vgs3Dc">Tigresa</a> from the <a href="https://en.wikipedia.org/wiki/Bicho_(album)">Bicho (1977)</a> album. Ciro once knew one.</p>
 </li>
 <li>
 <p>1978 album <a href="https://en.wikipedia.org/wiki/Muito_(Dentro_da_Estrela_Azulada)">Muito (Dentro da Estrela Azulada)</a></p>
+</li>
+<li>
+<p>1980 <a href="https://www.youtube.com/watch?v=4ra8DHnO2cc">Menino do Rio</a> apparently from 1980 and served as inspiration for the <a href="https://pt.wikipedia.org/wiki/Menino_do_Rio">Menino do Rio (1980)</a> movie, which is silly but fun</p>
+</li>
+<li>
+<p>1984 <a href="https://www.youtube.com/watch?v=_CuWgaJMg0U">O quereres</a> from the <a href="https://pt.wikipedia.org/wiki/Vel%C3%B4">Velô (1984)</a> album</p>
 <div class="ulist">
 <ul>
 <li>
@@ -4732,17 +4763,68 @@ xdg-open http://localhost:4000</pre>
 </ul>
 </div>
 </li>
-</ul>
-</div>
-<div class="paragraph">
-<p>French:</p>
-</div>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Chico_Buarque">Chico Buarque</a>. Ciro&#8217;s second favorite.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.youtube.com/watch?v=zKbXUcJawUI">Emmenez-moi</a> (<a href="https://fr.wikipedia.org/wiki/Emmenez-moi_(chanson)">wiki</a>) from the album Entre Deux Rêves (1967) by <a href="https://en.wikipedia.org/wiki/Charles_Aznavour">Charles Aznavour</a></p>
+<p>1968 <a href="https://www.youtube.com/watch?v=G4SkmKGBe_E">Roda Viva</a> from the <a href="https://pt.wikipedia.org/wiki/Chico_Buarque_de_Hollanda_-_Volume_3">Chico Buarque de Hollanda - Volume 3 (1968)</a> album</p>
+</li>
+<li>
+<p>1971 <a href="https://en.wikipedia.org/wiki/Constru%C3%A7%C3%A3o">Construção (1971)</a> album</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=vmGrRmXivmM">Construção</a></p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=FB4IaqWITB8">Cotidiano</a></p>
 </li>
 </ul>
+</div>
+</li>
+<li>
+<p>1973 <a href="https://www.youtube.com/watch?v=RzlniinsBeY">Cálice (Cale-se)</a></p>
+</li>
+<li>
+<p>1993 <a href="https://www.youtube.com/watch?v=eEXwfAzRR1I">Paratodos</a> from the <a href="https://pt.wikipedia.org/wiki/Paratodos_(%C3%A1lbum)">Paratodos (1993)</a> album</p>
+</li>
+<li>
+<p>Songs about the <a href="https://en.wikipedia.org/wiki/Malandragem">malandro</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p>1978 <a href="https://www.youtube.com/watch?v=dZZgtHUgSEQ">Feijoada completa</a> from the <a href="https://en.wikipedia.org/wiki/Chico_Buarque_(1978_album)">Chico Buarque (1978)</a> album</p>
+</li>
+<li>
+<p>1985 <a href="https://www.youtube.com/watch?v=v5j2YZPoogU">A volta do malandro</a> from the <a href="https://pt.wikipedia.org/wiki/Malandro_(%C3%A1lbum_de_Chico_Buarque)">Malandro (1985)</a> album</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><a href="https://en.wikipedia.org/wiki/Gilberto_Gil">Gilberto Gil</a>. The third of the holy trinity of MPB after Caetano and Chico. Good selection: <a href="https://pt.wikipedia.org/wiki/Ac%C3%BAstico_MTV_-_Gilberto_Gil">Acústico MTV - Gilberto Gil (1994)</a></p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.youtube.com/watch?v=kg6DCav1gek">Lunik 9</a> from the <a href="https://en.wikipedia.org/wiki/Louva%C3%A7%C3%A3o">Louvação (1967)</a> album</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=aipWGQeX2JY">A Paz</a> from the <a href="https://en.wikipedia.org/wiki/Louva%C3%A7%C3%A3o">Louvação (1967)</a> album</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=uT21kqCoQro">Refazenda</a> from the <a href="https://pt.wikipedia.org/wiki/Refazenda">Refazenda (1975)</a> album</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Roberto Carlos makes <a href="#ciro-santilli">Ciro Santilli</a> cringe.</p>
 </div>
 </div>
 </div>
@@ -6856,7 +6938,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/636240617b31d3eaf9696089ab105898dc2a9fde">636240617b31d3eaf9696089ab105898dc2a9fde</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/f98b2aceecff67c5529ebcf4fae3b5ba3d8eaf7b">f98b2aceecff67c5529ebcf4fae3b5ba3d8eaf7b</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
