--- a/index.html
+++ b/index.html
@@ -4799,6 +4799,9 @@ xdg-open http://localhost:4000</pre>
 <li>
 <p>1985 <a href="https://www.youtube.com/watch?v=v5j2YZPoogU">A volta do malandro</a> from the <a href="https://pt.wikipedia.org/wiki/Malandro_(%C3%A1lbum_de_Chico_Buarque)">Malandro (1985)</a> album</p>
 </li>
+<li>
+<p>1987 <a href="https://www.youtube.com/watch?v=v5j2YZPoogU">Teresinha</a> from the <a href="https://pt.wikipedia.org/wiki/%C3%93pera_do_Malandro">Ópera do Malandro (1987)</a> musical</p>
+</li>
 </ul>
 </div>
 </li>
@@ -6866,18 +6869,42 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
 <div class="ulist">
 <ul>
 <li>
-<p>weekend days in his awesome room learning Chinese</p>
+<p>hide in top corner desk of the library to learn some science. Ciro loves libraries.</p>
 </li>
 <li>
-<p>hide in top corner desk of the library to learn some science</p>
+<p>weekend days in his awesome room learning Chinese</p>
+<div id="image-desk-of-ciro-santilli-s-room-at-cole-polytechnique-as-he-as-in-the-middle-of-moving-out-in-2012-the-room-also-has-a-bed-and-toilet-it-was-great-and-it-was-free-only-the-kitchen-was-shared-which-is-good-for-meeting-people-all-students-live-on-campus-which-is-great-for-concentration-" class="imageblock">
+<div class="content">
+<a class="image" href="#image-desk-of-ciro-santilli-s-room-at-cole-polytechnique-as-he-as-in-the-middle-of-moving-out-in-2012-the-room-also-has-a-bed-and-toilet-it-was-great-and-it-was-free-only-the-kitchen-was-shared-which-is-good-for-meeting-people-all-students-live-on-campus-which-is-great-for-concentration-"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/Desk_of_Ciro_Santilli's_room_at_École_Polytechnique_as_he_as_in_the_middle_of_moving_out_in_2012.jpg" alt="Desk of Ciro Santilli's room at École Polytechnique as he as in the middle of moving out in 2012" height="400"></a>
+</div>
+<div class="title">Figure 26. Desk of Ciro Santilli&#8217;s room at École Polytechnique as he as in the middle of moving out in 2012. The room also has a bed and toilet, it was great, and it was free! Only the kitchen was shared, which is good for meeting people. All students live on campus, which is great for concentration.</div>
+</div>
 </li>
 <li>
 <p>sit next to the lake in a warm day to relax</p>
+<div id="image-lake-view-of-the-grand-hall-building-of-cole-polytechnique-in-a-cloudy-day-just-imagine-this-in-a-perfect-sunny-weekend-day-with-pure-silence-it-was-just-perfect-the-lake-also-has-a-long-area-where-rowing-is-practiced-" class="imageblock">
+<div class="content">
+<a class="image" href="#image-lake-view-of-the-grand-hall-building-of-cole-polytechnique-in-a-cloudy-day-just-imagine-this-in-a-perfect-sunny-weekend-day-with-pure-silence-it-was-just-perfect-the-lake-also-has-a-long-area-where-rowing-is-practiced-"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/Lake_view_of_the_Grand_Hall_building_of_École_Polytechnique_in_a_cloudy_day.jpg" alt="Lake view of the Grand Hall building of École Polytechnique in a cloudy day" height="400"></a>
+</div>
+<div class="title">Figure 27. Lake view of the Grand Hall building of École Polytechnique in a cloudy day. Just imagine this in a perfect sunny weekend day with pure silence, it was just perfect. The lake also has a long area where rowing is practiced.</div>
+</div>
 </li>
 <li>
-<p>randomly go study in one of the small 20 person classrooms that were used in the day and left open at night</p>
+<p>randomly go study at night in one of the small 20 person classrooms that were used in the day and left open at night</p>
+<div id="image-a-typical-small-classroom-at-polytechnique-with-tables-in-the-usual-course-configuration-imagine-that-at-night-in-pure-silence-with-some-of-your-best-friends-studying-on-a-nearby-room-the-usual-course-configuration-was-first-a-course-by-the-main-teacher-in-a-large-amphitheater-and-then-break-down-into-small-groups" class="imageblock">
+<div class="content">
+<a class="image" href="#image-a-typical-small-classroom-at-polytechnique-with-tables-in-the-usual-course-configuration-imagine-that-at-night-in-pure-silence-with-some-of-your-best-friends-studying-on-a-nearby-room-the-usual-course-configuration-was-first-a-course-by-the-main-teacher-in-a-large-amphitheater-and-then-break-down-into-small-groups"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Master_STER_Nassar_Polytechnique.jpg/640px-Master_STER_Nassar_Polytechnique.jpg" alt="640px Master STER Nassar Polytechnique" height="400"></a>
+</div>
+<div class="title">Figure 28. A typical small classroom at Polytechnique, with tables in the usual course configuration. Imagine that at night, in pure silence, with some of your best friends studying on a nearby room. The usual course configuration was first a course by the main teacher in a large amphitheater, and then break down into small groups. <a href="https://commons.wikimedia.org/wiki/File:Master_STER_Nassar_Polytechnique.jpg">Source</a>.</div>
+</div>
 </li>
 </ul>
+</div>
+<div id="image-horny-polytechnicienne-in-grand-uniform-mural-by-binet-bd-96-at-cole-polytechnique-with-nipple-censored-by-ciro-santilli-as-seen-in-2010-every-year-student-organizations-https-www-polytechnique-net-groups-binets-called-binets-todo-etymology-get-to-compete-for-student-elections-and-they-are-allowed-to-make-murals-in-the-school-to-advertise-themselves-they-kinky-people-from-the-1996-cartoon-binet-bd-band-dessin-cartoon-in-french-decided-to-take-it-to-the-next-level-good-old-1996-this-would-never-be-allowed-in-2019-due-to-political-correctness-as-an-engineering-school-polytechnique-students-were-predominantly-male-up-as-of-2019-" class="imageblock">
+<div class="content">
+<a class="image" href="#image-horny-polytechnicienne-in-grand-uniform-mural-by-binet-bd-96-at-cole-polytechnique-with-nipple-censored-by-ciro-santilli-as-seen-in-2010-every-year-student-organizations-https-www-polytechnique-net-groups-binets-called-binets-todo-etymology-get-to-compete-for-student-elections-and-they-are-allowed-to-make-murals-in-the-school-to-advertise-themselves-they-kinky-people-from-the-1996-cartoon-binet-bd-band-dessin-cartoon-in-french-decided-to-take-it-to-the-next-level-good-old-1996-this-would-never-be-allowed-in-2019-due-to-political-correctness-as-an-engineering-school-polytechnique-students-were-predominantly-male-up-as-of-2019-"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/Horny_polytechnicienne_mural_by_binet_BD_96_at_École_Polytechnique_with_nipple_censored_as_seen_in_2010.jpg" alt="Horny polytechnicienne mural by binet BD 96 at École Polytechnique with nipple censored as seen in 2010" height="400"></a>
+</div>
+<div class="title">Figure 29. Horny polytechnicienne in Grand Uniform mural by binet BD 96 at École Polytechnique with nipple censored by Ciro Santilli as seen in 2010. Every year, student organizations, <a href="https://www.polytechnique.net/groups/binets">called "binets"</a> (TODO etymology), get to compete for student elections, and they are allowed to make murals in the school to advertise themselves. They kinky people from the 1996 Cartoon Binet (BD == Band Dessiné == Cartoon in French) decided to take it to the next level. Good old 1996, this would never be allowed in 2019 due to political correctness. As an engineering school, Polytechnique students were predominantly male up as of 2019.</div>
 </div>
 <div class="paragraph">
 <p>The following promotional videos give an idea of how the school looks like, although they fundamentally miss the little corners that Ciro really loved in that the place and which made it magic:</p>
@@ -6938,7 +6965,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/f98b2aceecff67c5529ebcf4fae3b5ba3d8eaf7b">f98b2aceecff67c5529ebcf4fae3b5ba3d8eaf7b</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/2e050f164d99e283de3f179929c399527d88cfae">2e050f164d99e283de3f179929c399527d88cfae</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
